[package]
name = "libssh2-sys"
version = "0.1.31"
authors = ["Alex Crichton <alex@alexcrichton.com>"]
license = "MIT/Apache-2.0"
repository = "https://github.com/alexcrichton/ssh2-rs"
description = "Native bindings to the libssh2 library"

[lib]
name = "libssh2_sys"
path = "lib.rs"

[dependencies]
libc = "0.1"
